<resources>
    <string name="app_name">CameraTest2</string>
    <string name="hint_continuous_shot">Taking images continuously when Toggle button is checked</string>
    <string name="text_continuous_shot">Continuous Shot</string>
    <string name="hint_single_shot">Taking A single image when Toggle button is checked and stops taking pictures</string>
    <string name="text_single_shot">Single Shot</string>
    <string name="hint_intervals_shot">Enter the interval in seconds in the EditText below and click the toggle button to start taking pictures in the given intervals of time</string>
    <string name="hint_enter_intervals">Enter intervals in seconds</string>
    <string name="text_open_camera">Open Camera</string>
    <string name="hint_camera_without_stretch">Camera without stretching preview to take continuous pictures (from preview frames)</string>
    <string name="hint_camera_2">Camera 2 api demo</string>
    <string name="hint_appbar_camera">Camera in appbar</string>
    <string name="text_intervals_shot">Intervals Shot</string>
    <string name="placeholder_image_count">Image Count : %d</string>
    <string name="text_on">ON</string>
    <string name="text_off">OFF</string>
    <string name="text_camera_2">Camera 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_permission">Requesting permission to work</string>
    <string name="camera_error">Error in camera</string>
    <string name="intro_message">Welcome to camera2</string>
    <string name="text_camera_x">Camera X</string>
    <string name="text_open_camera_x">Open Camera X</string>
    <string name="text_usb_camera">USB Camera</string>
</resources>