<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ui.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/hint_continuous_shot"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonContinuousShot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/shape_stroke_thin"
            android:text="@string/text_continuous_shot"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="5dp"
            android:background="@android:color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/hint_single_shot"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSingleShot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/shape_stroke_thin"
            android:text="@string/text_single_shot"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="5dp"
            android:background="@android:color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/hint_intervals_shot"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextIntervals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@null"
            android:hint="@string/hint_enter_intervals"
            android:inputType="number"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonIntervalsShot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/shape_stroke_thin"
            android:text="@string/text_intervals_shot"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/hint_camera_without_stretch"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCameraWithoutStretch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/shape_stroke_thin"
            android:text="@string/text_open_camera"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/hint_camera_2"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCamera2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/shape_stroke_thin"
            android:text="@string/text_camera_2"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/hint_appbar_camera"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAppBarCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/shape_stroke_thin"
            android:text="@string/text_open_camera"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/text_camera_x"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCameraX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/shape_stroke_thin"
            android:text="@string/text_open_camera_x"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/text_usb_camera"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonUSBCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/shape_stroke_thin"
            android:text="@string/text_usb_camera"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>